--- a/translations/en.json
+++ b/translations/en.json
@@ -12,14 +12,20 @@
       "altText": "Bar",
       "caption": {
         "title": "Club Termix",
-        "subtitle": ["Gay bar", "in central Prague"]
+        "subtitle": [
+          "Gay bar",
+          "in central Prague"
+        ]
       }
     },
     "features": [
       {
         "altText": "Tray with drinks",
         "title": "Amazing drinks",
-        "description": ["Wide selection of beverages.", "Try out our chilled cocktails."],
+        "description": [
+          "Wide selection of beverages.",
+          "Try out our chilled cocktails."
+        ],
         "buttonText": "Drinks »",
         "buttonLink": "drink_menu",
         "image": "drinks.jpg"
@@ -27,7 +33,10 @@
       {
         "altText": "Microphone",
         "title": "Entertainment",
-        "description": ["Dance to the popular songs.", "Wed-Sat, from 10 PM."],
+        "description": [
+          "Dance to the popular songs.",
+          "Wed-Sat, from 10 PM."
+        ],
         "buttonText": "Contacts »",
         "buttonLink": "contacts",
         "image": "karaoke.jpg"
@@ -35,7 +44,10 @@
       {
         "altText": "Man with devil mask",
         "title": "Themed Parties",
-        "description": ["No shortage of events.", "Come and experience great fun."],
+        "description": [
+          "No shortage of events.",
+          "Come and experience great fun."
+        ],
         "buttonText": "Gallery »",
         "buttonLink": "gallery",
         "image": "party.jpg"
@@ -43,8 +55,14 @@
     ],
     "featurettes": [
       {
-        "heading": ["We can shake it up.", "Come see for yourself."],
-        "description": ["Our bartenders are professionals.", "They can mix you a top-notch taste experience."],
+        "heading": [
+          "We can shake it up.",
+          "Come see for yourself."
+        ],
+        "description": [
+          "Our bartenders are professionals.",
+          "They can mix you a top-notch taste experience."
+        ],
         "image": {
           "altText": "bartender",
           "src": "assets/img/barman.jpg",
@@ -52,8 +70,14 @@
         }
       },
       {
-        "heading": ["An interior that entertains.", "We are waiting for you."],
-        "description": ["A place to sit with friends or have a big party?", "We are ready."],
+        "heading": [
+          "An interior that entertains.",
+          "We are waiting for you."
+        ],
+        "description": [
+          "A place to sit with friends or have a big party?",
+          "We are ready."
+        ],
         "image": {
           "altText": "Interior",
           "src": "assets/img/car.jpg",
@@ -61,8 +85,14 @@
         }
       },
       {
-        "heading": ["We go even after midnight.", "Show us how you can get the party started."],
-        "description": ["You can party with us from Wednesday to Saturday.", "We are open from 10 PM until the morning."],
+        "heading": [
+          "We go even after midnight.",
+          "Show us how you can get the party started."
+        ],
+        "description": [
+          "You can party with us from Wednesday to Saturday.",
+          "We are open from 10 PM until the morning."
+        ],
         "image": {
           "altText": "Party",
           "src": "assets/img/night_life.jpg",
@@ -112,8 +142,548 @@
     "entrance_image": {
       "alt": "Main entrance"
     },
-   "opening_hours": {
+    "opening_hours": {
       "heading": "Opening Hours"
     }
+  },
+  "drink_menu": {
+    "title": "Drink Menu",
+    "main_drinks": [
+      {
+        "subsection_name": "Aperitifs",
+        "products": [
+          {
+            "name": "Campari",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Artspritz",
+            "measure": "0.04 l",
+            "price": "65"
+          },
+          {
+            "name": "Martini",
+            "measure": "0.1 l",
+            "price": "65"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Bourbon, Whiskey",
+        "products": [
+          {
+            "name": "Jim Beam White",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Four Roses",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Jack Daniel's",
+            "measure": "0.04 l",
+            "price": "80"
+          },
+          {
+            "name": "Jack Daniel's Fire/Honey",
+            "measure": "0.04 l",
+            "price": "80"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Whisky",
+        "products": [
+          {
+            "name": "Johny Walker Red Label",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Ballantine's",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Tullamore Dew",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Jameson",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Whisky 10-20 YO dle nabídky",
+            "measure": "0.04 l",
+            "price": "95"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Gin",
+        "products": [
+          {
+            "name": "SAVOY Dry Gin",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "RIVES Pink",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Bombay Sapphire",
+            "measure": "0.04 l",
+            "price": "70"
+          },
+          {
+            "name": "Star of Bombay 47.5%",
+            "measure": "0.04 l",
+            "price": "85"
+          },
+          {
+            "name": "Botanist Islay Dry Gin 46%",
+            "measure": "0.04 l",
+            "price": "85"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Vodka",
+        "products": [
+          {
+            "name": "SAVOY vodka",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Flavoured vodka /dle nabídky/",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Grey goose premium",
+            "measure": "0.04 l",
+            "price": "95"
+          },
+          {
+            "name": "Xellent Swiss ultra premium",
+            "measure": "0.04 l",
+            "price": "95"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Rum",
+        "products": [
+          {
+            "name": "AREHUCAS blanco, oro",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Bacardi Oakhart",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Cortez Spiced / Bacardi Oakheart",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Ypióca Prata",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Malibu",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Arehucas 7 aňos",
+            "measure": "0.04 l",
+            "price": "70"
+          },
+          {
+            "name": "The Kraken Black Spiced rum",
+            "measure": "0.04 l",
+            "price": "70"
+          },
+          {
+            "name": "El Comandante (80%)",
+            "measure": "0.04 l",
+            "price": "70"
+          },
+          {
+            "name": "Legendario – Elixir de Cuba",
+            "measure": "0.04 l",
+            "price": "70"
+          },
+          {
+            "name": "Bacardí 8 aňos",
+            "measure": "0.04 l",
+            "price": "80"
+          },
+          {
+            "name": "El Comandante 18 YO",
+            "measure": "0.04 l",
+            "price": "95"
+          },
+          {
+            "name": "Zacapa Centenario 23y.o.",
+            "measure": "0.04 l",
+            "price": "150"
+          },
+          {
+            "name": "Zacapa Centenario 25 YO",
+            "measure": "0.04 l",
+            "price": "250"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Cognac, Brandy",
+        "products": [
+          {
+            "name": "Armagnac Lalanne Napoleon",
+            "measure": "0.04 l",
+            "price": "90"
+          },
+          {
+            "name": "Armagnac Lalanne XO",
+            "measure": "0.04 l",
+            "price": "130"
+          },
+          {
+            "name": "Metaxa 5*",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Metaxa 7*",
+            "measure": "0.04 l",
+            "price": "70"
+          },
+          {
+            "name": "Metaxa 12*",
+            "measure": "0.04 l",
+            "price": "110"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Tequila",
+        "products": [
+          {
+            "name": "Sierra silver",
+            "measure": "0.04 l",
+            "price": "80"
+          },
+          {
+            "name": "Sierra reposado",
+            "measure": "0.04 l",
+            "price": "80"
+          },
+          {
+            "name": "Sierra Antiquo Plata",
+            "measure": "0.04 l",
+            "price": "95"
+          },
+          {
+            "name": "Sierra Antiquo aňejo",
+            "measure": "0.04 l",
+            "price": "95"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Liqueurs",
+        "products": [
+          {
+            "name": "Jägermeister",
+            "measure": "0.04 l",
+            "price": "65"
+          },
+          {
+            "name": "Baileys",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Kahlua",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Sambuca Antica",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Southern Comfort",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Kwai Feh Lychee / likér z lychee",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Cointreau",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Fernet Stock, Fernet Stock Citrus",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Karlovarská Becherovka, Lemond",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Bartida Zelená",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Peach Tree",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Trojka Pink",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Trojka Green",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Trojka Devil",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Trojka Gold",
+            "measure": "0.04 l",
+            "price": "50"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Other spirits",
+        "products": [
+          {
+            "name": "Baron Hildprandt Plum Brandy",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Baron Hildprandt Pear Brandy",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Baron Hildprandt Pear",
+            "measure": "0.04 l",
+            "price": "65"
+          },
+          {
+            "name": "Baron Hildprandt Raspberry",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Absinth Bestie 60%",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "Bartida Tuzemák (potato rum)",
+            "measure": "0.04 l",
+            "price": "50"
+          },
+          {
+            "name": "Smirnoff Ice",
+            "measure": "0.275 l",
+            "price": "90"
+          }
+        ]
+      },
+      {
+        "subsection_name": "TATRATEA",
+        "products": [
+          {
+            "name": "TATRATEA",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "TATRATEA peach 42%",
+            "measure": "0.04 l",
+            "price": "60"
+          },
+          {
+            "name": "TATRATEA original 52%",
+            "measure": "0.04 l",
+            "price": "65"
+          },
+          {
+            "name": "TATRATEA forest fruit 62%",
+            "measure": "0.04 l",
+            "price": "65"
+          },
+          {
+            "name": "TATRATEA outlaw 72%",
+            "measure": "0.04 l",
+            "price": "65"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Beer",
+        "products": [
+          {
+            "name": "Staropramen 10° draft",
+            "measure": "0.5 l",
+            "price": "45"
+          },
+          {
+            "name": "Staropramen 10° draft",
+            "measure": "0.3 l",
+            "price": "27"
+          },
+          {
+            "name": "Carling Cider cherry draft",
+            "measure": "0.3 l",
+            "price": "45"
+          },
+          {
+            "name": "Stella artois lager 12°",
+            "measure": "0.33 l",
+            "price": "50"
+          },
+          {
+            "name": "Stella artois non-alcohol",
+            "measure": "0.33 l",
+            "price": "40"
+          },
+          {
+            "name": "Carling Cider on offer",
+            "measure": "0.33 l",
+            "price": "50"
+          },
+          {
+            "name": "Frisco by offer",
+            "measure": "0.33 l",
+            "price": "50"
+          },
+          {
+            "name": "Corona",
+            "measure": "0.33 l",
+            "price": "90"
+          },
+          {
+            "name": "Desperado",
+            "measure": "0.33 l",
+            "price": "90"
+          }
+        ]
+      },
+      {
+        "subsection_name": "Soft drinks",
+        "products": [
+          {
+            "name": "Pepsi Cola (postmix)",
+            "measure": "0.1 l",
+            "price": "15"
+          },
+          {
+            "name": "Tonic, 7UP, Soda (postmix)",
+            "measure": "0.1 l",
+            "price": "15"
+          },
+          {
+            "name": "Mirinda",
+            "measure": "0.33 l",
+            "price": "40"
+          },
+          {
+            "name": "PEPSI Sugar free",
+            "measure": "0.33 l",
+            "price": "40"
+          },
+          {
+            "name": "Ginger Ale",
+            "measure": "0.25 l",
+            "price": "40"
+          },
+          {
+            "name": "Ice tea - lemon, peach, green tea",
+            "measure": "0.2 l",
+            "price": "40"
+          },
+          {
+            "name": "Juice on tap (according to offer)",
+            "measure": "0.1 l",
+            "price": "15"
+          },
+          {
+            "name": "Juice TOMA - glass (according to offer)",
+            "measure": "0.25 l",
+            "price": "40"
+          },
+          {
+            "name": "Juice Pfanner - glass (according to offer)",
+            "measure": "0.2 l",
+            "price": "40"
+          },
+          {
+            "name": "TOMA - slightly sparkling, still",
+            "measure": "0.3 l",
+            "price": "35"
+          },
+          {
+            "name": "KORUNNÍ - mineral water, slightly sparkling",
+            "measure": "0.33 l",
+            "price": "35"
+          },
+          {
+            "name": "Evian",
+            "measure": "0.33 l",
+            "price": "45"
+          },
+          {
+            "name": "RED BULL, RED BULL light",
+            "measure": "0.25 l",
+            "price": "65"
+          },
+          {
+            "name": "RED BULL EDITION silver/red,/blue",
+            "measure": "0.25 l",
+            "price": "65"
+          },
+          {
+            "name": "Espresso, milk",
+            "measure": "9g",
+            "price": "40"
+          }
+        ]
+      }
+    ]
   }
 }
