--- a/translations/cs.json
+++ b/translations/cs.json
@@ -1050,6 +1050,11 @@
           ]
         }
       ]
-    }
+    },
+    "disclaimers": [
+      "Seznam alergenů u obsluhy na baru.",
+      "Veškeré nápoje jsou podávány s ledem.",
+      "Platnost od 1.8. 2017."
+    ]
   }
 }
