--- a/translations/cs.json
+++ b/translations/cs.json
@@ -154,6 +154,9 @@
     },
     "operator": "Provozovatel"
   },
+  "gallery": {
+    "title": "Galerie"
+  },
   "drink_menu": {
     "title": "Nápojový lístek",
     "altText": "Servítování vína",
