--- a/translations/en.json
+++ b/translations/en.json
@@ -110,6 +110,18 @@
       "cloakroom": "Cloakroom"
     }
   },
+  "about": {
+    "title": "About Us",
+    "quote": [
+      "We are an open bar where everyone can have fun, regardless of their background or orientation.",
+      "A friendly atmosphere and great music."
+    ],
+    "fb_button_text": "Follow us fow the news",
+    "other_bars_title": [
+      "Do you like TerMix?",
+      "Visit also our other clubs in Prague."
+    ]
+  },
   "openingHours": [
     {
       "day": "Wednesday",
