--- a/translations/cs.json
+++ b/translations/cs.json
@@ -122,7 +122,7 @@
       "Navštivte i naše další kluby v Praze."
     ]
   },
-  "openingHours": [
+  "opening_hours": [
     {
       "day": "Středa",
       "hours": "22:00 - 5:00"
