--- a/translations/en.json
+++ b/translations/en.json
@@ -122,7 +122,7 @@
       "Visit also our other clubs in Prague."
     ]
   },
-  "openingHours": [
+  "opening_hours": [
     {
       "day": "Wednesday",
       "hours": "10:00 PM - 5:00 AM"
