change phone and mail

--- a/translations/cs.json
+++ b/translations/cs.json
@@ -163,8 +163,8 @@
     "opening_hours": {
       "heading": "Otevírací doba"
     },
-    "reservations": {
-      "heading": "Rezervace"
+    "phone": {
+      "heading": "Telefon"
     },
     "operator": "Provozovatel"
   },
