--- a/translations/en.json
+++ b/translations/en.json
@@ -163,8 +163,8 @@
     "opening_hours": {
       "heading": "Opening Hours"
     },
-    "reservations": {
-      "heading": "Reservations"
+    "phone": {
+      "heading": "Phone"
     },
     "operator": "Operator"
   },
