remove entery fee info

--- a/translations/cs.json
+++ b/translations/cs.json
@@ -105,8 +105,7 @@
     "ageRestriction": "Vstup od 18",
     "payments": [
       "Pouze hotovost",
-      "Bankomat",
-      "Vstupné"
+      "Bankomat"
     ],
     "cloakroom": "Šatna"
   },
