--- a/translations/cs.json
+++ b/translations/cs.json
@@ -170,6 +170,7 @@
   "drink_menu": {
     "title": "Nápojový lístek",
     "altText": "Servítování vína",
+    "download": "Stáhnout",
     "groups": [
       {
         "subsection_name": "Aperitivy",
