--- a/translations/en.json
+++ b/translations/en.json
@@ -170,6 +170,7 @@
   "drink_menu": {
     "title": "Drink Menu",
     "altText": "An assortment of wine bottles on a wooden table",
+    "download": "Download",
     "groups": [
       {
         "subsection_name": "Aperitifs",
