change contact layout

--- a/translations/cs.json
+++ b/translations/cs.json
@@ -162,6 +162,9 @@
     "opening_hours": {
       "heading": "Otevírací doba"
     },
+    "additional_info": {
+      "heading": "Další informace"
+    },
     "operator": "Provozovatel"
   },
   "gallery": {
