--- a/translations/en.json
+++ b/translations/en.json
@@ -162,6 +162,9 @@
     "opening_hours": {
       "heading": "Opening Hours"
     },
+    "additional_info": {
+      "heading": "Additional info"
+    },
     "operator": "Operator"
   },
   "gallery": {
