--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -196,7 +196,7 @@
                 "name": "Martini",
                 "measure": "0.1 l",
                 "price": "80",
-                "info": "Dry, Bianco, Fiero"
+                "info": "Dry/Bianco/Fiero"
               },
               {
                 "name": "Aperol",
@@ -441,7 +441,7 @@
                 "name": "Ferner Stock",
                 "measure": "0.04 l",
                 "price": "70",
-                "info": "Stock Citrus"
+                "info": "Stock/Citrus"
               },
               {
                 "name": "Karlovarská Becherovka",
