price disclaimer drink menu

--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -177,7 +177,8 @@
     "disclaimers": [
       "Seznam alergenů u obsluhy na baru.",
       "Veškeré nápoje jsou podávány s ledem.",
-      "Platnost od 1.8. 2017."
+      "Platnost k 1.5. 2022.",
+      "Ceny a dostupnost se mohou změnit. <br> Nejaktuálnější informace si prosím ověřte u našeho personálu."
     ],
     "sections": [
       {
