--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -177,7 +177,8 @@
     "disclaimers": [
       "List of allergens with the bar staff.",
       "All drinks are served with ice.",
-      "Valid from August 1, 2017."
+      "Valid as of May 1, 2022.",
+      "Prices and availability are subject to change. <br> Please check with our staff for the most current information."
     ],
     "sections": [
       {
